Rename angular module name to match the application name

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="angularGulp" ng-strict-di>
+<html ng-app="angularFlickrSearch" ng-strict-di>
   <head>
     <meta charset="utf-8">
     <title>Flickr Search (Angular JS)</title>
